--- a/package.json
+++ b/package.json
@@ -1,15 +1,30 @@
 {
-  "name": "final_project",
+  "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.0"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@tippy.js/react": "^3.1.1",
+    "card": "^2.5.4",
+    "google-map-react": "^2.1.10",
+    "install": "^0.13.0",
+    "mapbox-gl": "^2.7.0",
+    "query-string": "^7.1.0",
+    "react": "^16.14.0",
+    "react-bootstrap": "^2.1.2",
+    "react-dom": "^16.14.0",
+    "react-laag": "^2.0.3",
+    "react-map-gl": "^7.0.7",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-slide-out": "^0.1.4",
+    "react-tooltip": "^4.2.21",
+    "react-twitter-embed": "^4.0.4",
+    "react-typing-effect": "^2.0.4",
+    "styled-components": "^5.3.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,10 +33,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
